# solarfour

./: .gitignore  main.py  pyproject.toml  solarfour.code-workspace
Heliostat/src/: main.cpp
app/: main.py
arduino/AccelStepper/: .gitignore
arduino/src/: main.ino
backend/: pom.xml
backend/app/: main.py
backend/cli-app/: pom.xml
backend/cli-app/src/main/java/com/cli/: Main.java
backend/core/: pom.xml
backend/core/src/main/java/com/backend/device/: ArduinoGateway.java
backend/core/src/main/java/com/backend/geometry/: UnitVector.java
backend/src/main/java/com/backend/geometry/: UnitVector.java
backend/src/solf/: core.py  vector.py
backend/src/test/java/com/backend/geometry/: UnitVectorTest.java
hello-maven/: pom.xml
scripts/: serial_send.py
ui/: index.html  package.json  pnpm-lock.yaml
ui/src/: app.jsx  index.css
