[project]
name = "solarfour"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=2.4.6",
    "pyserial>=3.5",
    "pysolar>=0.13",
    "pytz>=2026.2",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["solf"]


[tool.setuptools.package-dir]
"" = "src"
